Added about proceedings

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "GRAIL-V at CVPR 2026"
-description: "Grounded Retrieval & Agentic Intelligence for Vision-Language."
+description: "Grounded Retrieval & Agentic Intelligence for Vision-Language. Accepted papers appear in the CVPR 2026 Workshop Proceedings."
 baseurl: ""
 url: "https://grailworkshops.github.io"
 markdown: kramdown
