--- a/_data/site.yml
+++ b/_data/site.yml
@@ -21,6 +21,8 @@ seo:
     - "paper submission"
     - "camera-ready"
     - "workshop submissions"
+    - "workshop proceedings"
+    - "CVPR workshop proceedings"
     - "computer vision"
     - "vision-language models"
     - "VLM"
