Updates for search

--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -3,7 +3,7 @@
   description: "CFP opens with submission details and topics."
   internal: true
 - date: "Mar 5, 2026"
-  title: "Paper submission deadline"
+  title: "CVPR 2026 workshop submission deadline"
   description: "OpenReview submission closes at 23:59 AoE."
 - date: "Mar 20-22, 2026"
   title: "Author response (optional)"
