--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -83,13 +83,17 @@
     scholar: "https://scholar.google.com/citations?hl=en&user=8rDNIMsAAAAJ"
     linkedin: "https://www.linkedin.com/in/scottyih/"
 - name: "Sujith Ravi"
-  org: "Oracle AI"
-  focus: "Frontier models and agentic systems for enterprise AI."
-  bio: "VP of AI at Oracle, leading frontier models and agentic systems for enterprise and large‑scale deployment."
+  org: "Oracle"
+  focus: "Enterprise GenAI, agentic systems, and reliable deployment."
+  bio: "Vice President of GenAI at Oracle and former founder of SliceX AI, leading frontier models and agentic systems for enterprise reliability, safety, and large‑scale deployment."
   initials: "SR"
   publish: true
   profile: ""
   photo: "/assets/people/sujith_ravi.png"
+  links:
+    home: "https://www.sravi.org"
+    scholar: "https://scholar.google.com/citations?user=sM-dHicAAAAJ&hl=en&oi=ao"
+    linkedin: "https://www.linkedin.com/in/sujithravi/"
 
 - type: "panel"
   name: "More to be announced"
