--- a/_data/site.yml
+++ b/_data/site.yml
@@ -77,16 +77,16 @@ hero:
       style: "ghost"
   metrics:
     - value: "Who"
-      label: "CV/IR/NLP/HCI researchers building grounded agents"
+      label: "CV, IR, NLP & HCI researchers advancing grounded multimodal retrieval, reasoning, and verification"
       href: "/topics/#topics"
     - value: "Format"
-      label: "Keynotes · orals · posters/demos · panel"
+      label: "Invited keynotes · oral presentations · poster & demo sessions · expert panel discussion"
       href: "/program/#program"
     - value: "Where"
-      label: "Denver, USA · in-person + hybrid"
+      label: "CVPR 2026 · Denver, CO, USA · in-person with hybrid access"
       href: "/venue/#venue"
     - value: "When"
-      label: "Key dates and deadlines"
+      label: "Jun 3–4, 2026 · Submissions due Mar 5 (AoE)"
       href: "/cfp/#dates"
   countdowns:
     - label: "Submission deadline"
